BalanceResources: Introduce BalanceResourcesSkipDiskLimit
This new property (on C, RG and RD) disables the attempt of BalanceResources
for a given RD if the RD has more SkipDisk resources than the limit allows for.

That means if the limit is 1 (which is the default), 1 SkipDisk resource is tolerated.
Therefore the BalanceResources will try to create a new replica to replace the SkipDisk
resource. If this new resource also gets triggered into a SkipDisk, the second run of
BalanceResources (limit = 1, resources with SkipDisk = 2) will ignore the current RD
to avoid a cascading effect.